fix scrollbars

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -32,6 +32,17 @@
   z-index: 1;
 }
 
+/* Hide scrollbar for Chrome, Safari and Opera */
+.main::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+.main {
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+}
+
 .glass {
   background: transparent;
   backdrop-filter: blur(4px);
@@ -83,6 +94,17 @@
   transition: width 100ms ease-in-out;
   overflow: scroll;
   z-index: 1;
+}
+
+/* Hide scrollbar for Chrome, Safari and Opera */
+.right-drawer::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+.right-drawer {
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
 }
 
 .show {
